# goit-python-web-hw-07

./: alembic.ini  main.py  pyproject.toml  seed.py  university.db
alembic/versions/: 8ffde2290114_init.py
conf/: db.py  models.py
